# codex-music

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml
apps/api/: .dockerignore  .env.example  .vercelignore  Dockerfile  README.md  app.py  pyproject.toml
apps/api/src/codex_music_api/: __init__.py  audio_analysis.py  catalog.py  dependencies.py  main.py  providers.py  repository.py  schemas.py  settings.py  storage.py  studio_runner.py
apps/api/src/codex_music_api/routes/: __init__.py  capabilities.py  health.py  projects.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/studio/: page.tsx
apps/web/src/app/studio/[projectId]/: page.tsx
apps/web/src/app/studio/[projectId]/_components/: ab-compare-player.tsx  generation-loop-panel.tsx  live-midi-lab.tsx  midi-lab.tsx  project-studio-shell.tsx  stem-mixer.tsx  studio-workspace.tsx  timeline-editor.tsx  waveform-player.tsx
apps/web/src/app/studio/[projectId]/performance/: page.tsx
apps/web/src/app/studio/_components/: create-project-form.tsx  project-list.tsx
apps/web/src/components/: status-pill.tsx  top-nav.tsx
apps/web/src/lib/: api.ts  editor-session.ts  project-cache.ts
apps/web/src/lib/conductr/: director.ts  engine.ts  event-bridge.ts  model.ts
apps/web/src/lib/live-midi/: fallback-director.ts  midi-clock.ts  midi-input.ts  midi-output.ts  param-interpolator.ts  performance-analyzer.ts  scale-map.ts
(+5 files in other folders)
