[project]
name = "codex-music-api"
version = "0.1.0"
description = "FastAPI orchestration layer for the Codex Music web studio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fal-client>=0.13.2",
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "numpy>=2.4.0",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "ruff>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_music_api"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["codex_music_api"]
